# go-tools

terminalclustering/: .gitignore  Cargo.toml
terminalclustering/configs/: analysis.cfg  example.sgf  release.cfg  test.cfg
terminalclustering/src/: katago.rs  main.rs  sgf.rs
