[package]
name = "terminalclustering"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
rand = "0.9.2"
regex = "1.11.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.141"
sgf-parse = "4.2.5"
subprocess = "0.2.9"
tokio = { version = "1.47.0", features = ["sync", "full"] }
